--- a/index.html
+++ b/index.html
@@ -58,39 +58,76 @@
         <div class="py-6 z-10">
             <div class="flex flex-row justify-between items-center px-4 sm:px-6 lg:px-8 container mx-auto">
                 <div class="flex flex-1 items-center">
-                    <a class="cursor-pointer" goto="https://github.com/wo-r?tab=repositories">
+                    <a tooltip="This is Wo-r's github." class="cursor-pointer" goto="https://github.com/wo-r?tab=repositories">
                         <img class="h-14 rounded-full shadow-xl" src="https://avatars.githubusercontent.com/u/78428114"/>
                     </a>
                 </div>
-                <div class="flex flex-2 flex-row gap-2 justify-between">
-                    <button class="px-3 py-3 bg-brown-light hover:bg-brown-light text-white rounded-lg shadow-xl cursor-default relative overflow-hidden">Home</button>
+                <div class="flex flex-2 hidden sm:flex flex-row gap-2 justify-between">
+                    <button goto="/" ripple class="px-3 py-3 bg-brown hover:bg-brown-light text-white rounded-lg shadow-xl cursor-default relative overflow-hidden">Home</button>
                     <button goto="/articles" ripple class="px-3 py-3 bg-brown hover:bg-brown-light text-white rounded-lg shadow-xl relative overflow-hidden">Articles</button>
                     <button goto="/resume" ripple class="px-3 py-3 bg-brown hover:bg-brown-light text-white rounded-lg shadow-xl relative overflow-hidden">Resume</button>
                 </div>
+                <div class="block sm:hidden">
+                    <a id="menu" class="cursor-pointer">
+                        <svg class="" viewbox="0 0 50 45" width="45px" height="45px">    
+                            <path class="fill-brown hover:fill-brown-light" d="M 5 8 A 2.0002 2.0002 0 1 0 5 12 L 45 12 A 2.0002 2.0002 0 1 0 45 8 L 5 8 z M 5 23 A 2.0002 2.0002 0 1 0 5 27 L 45 27 A 2.0002 2.0002 0 1 0 45 23 L 5 23 z M 5 38 A 2.0002 2.0002 0 1 0 5 42 L 45 42 A 2.0002 2.0002 0 1 0 45 38 L 5 38 z">
+                        </svg>
+                        <svg class="hidden" viewbox="0 0 50 45" width="45px" height="45px">    
+                            <path class="fill-brown hover:fill-brown-light" d="M 9.15625 6.3125 L 6.3125 9.15625 L 22.15625 25 L 6.21875 40.96875 L 9.03125 43.78125 L 25 27.84375 L 40.9375 43.78125 L 43.78125 40.9375 L 27.84375 25 L 43.6875 9.15625 L 40.84375 6.3125 L 25 22.15625 Z">
+                        </svg>
+                    </a>
+                </div>
+                <div id="menu--target" class="hidden sm:hidden absolute top-[7rem] left-0 right-0 px-4 sm:px-6 lg:px-8 container mx-auto">
+                    <div class="bg-white w-full h-full rounded-xl shadow-2xl p-5">
+                        <div class="flex flex-col">
+                            <a goto="/" class="py-2 font-bold hover:text-brown-light hover:underline">Home</a>
+                            <a goto="/articles" class="py-2 font-bold hover:text-brown-light hover:underline">Articles</a>
+                            <a goto="/resume" class="py-2 font-bold hover:text-brown-light hover:underline">Resume</a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
-        <div class="pt-[5rem] pb-[15rem] px-4 sm:px-6 lg:px-8 container mx-auto">
-            <h1 class="text-8xl text-brown font-black">Welcome!</h1>
-            <span class="font-semibold">
-                Hello! Thanks for taking a look at my personal website! I have spent quite some time building it, and I wanted the website to be a place where I can share my thoughts and create my resume for future endeavors. I love to code; I spend almost every day trying to make something, either to fix, implement, or just for some fun. It's genuinely the best thing to ever exist on this planet, and I don't think I could really live without it.
-            </span>
-            <h1 class="text-5xl text-brown font-black mt-20">What is the purpose of this website?</h1>
-            <span class="font-semibold">
-                This website was created to serve multiple purposes: to share my resume, to write articles about my experiences, and to offer help through my articles to others who are in the same situation I was in. That's about it, and I'm proud that it is like that.
-            </span>
-            <h1 class="text-5xl text-brown font-black mt-20">How it started</h1>
-            <span class="font-semibold">
-                About 4 years ago from today (03/08/2024), I grew very tired of school's attempts to block access to websites or specific YouTube videos. I rebelled against this, perhaps a little too much. Some of my rebellious attempts worked, while others didn't. It was during this time that I learned about HTML and the ability to create websites. My journey began with a website template creator called Nicepage, which was okay, but I found it difficult to operate. I only managed to create one website with it, and it was not very good. Later that year, I started creating Python scripts, one of which was called Folder Manager, used for managing folders and directories. This was when my love for coding truly sparked. As a freshman in high school, I began coding websites with true HTML from the heart. After some time, I wanted to create a real website, one with a domain. I discovered a free website hosting service called 000webhost, where I also learned PHP, another amazing language that I love to use. It was during this time that projects like Vote-Ralph, Soldier-Island-Display, Chrome-Crash, and Read180-Bypass were created on GitHub. Afterwards, I learned about jQuery, which remains my best-known language to this day. I began to have some far-fetched but not impossible ideas. One of the most persistent ideas was for our school's website Echo, by Agilix, which, to me, was badly designed and could be greatly improved. This led to my involvement with Themius, CustomSkins, and now Proview. Throughout my sophomore and junior years, I continued this work whenever I had time, and it has really paid off, as I now use it daily. I could not imagine my school life without it. So, all of this brings us to now. I am an intermediate coder, self-taught, persistent at something that may never work, and still in high school. Why am I the way I am? Who knows, but I absolutely love it. 
-            </span>
-            <h1 class="text-5xl text-brown font-black mt-20">What is my plan?</h1>
-            <span class="font-semibold">
-                Quite simple, graduate from high school, earn a degree in Computer Science from college, and then either secure a job or start my own business, where I can develop games or create websites.
-            </span>
+        <div class="pt-[5rem] pb-[15rem] px-4 sm:px-6 lg:px-8 container mx-auto flex flex-col gap-[30rem]">
+            <div class="flex flex-col justify-center items-center h-[55vh]">
+                <h1 class="text-6xl sm:text-8xl text-brown font-black">Welcome!</h1>
+                <span class="font-semibold text-center">I'm <b class="font-bold text-brown-light">Wo-r</b>, a self learned coder who has spent probably way too much time on coding.</span>
+                <button goto="#learn-more" ripple class="mt-7 px-3 py-3 bg-brown hover:bg-brown-light text-white rounded-lg shadow-xl relative overflow-hidden">Learn More</button>
+            </div>
+            <div class="flex flex-col">
+                <h1 id="learn-more" class="text-6xl sm:text-8xl text-brown font-black mb-20">Languages</h1>
+                <div class="flex flex-row">
+                    <div class="flex flex-1 flex-col">
+                        <!--TOOD:-->
+                    </div>
+                </div>
+            </div>
+            <div></div>
         </div>
-        <div class="absolute bottom-0 w-full bg-brown-light">
-            <div class="flex flex-row justify-center md:justify-end py-14 items-center px-4 sm:px-6 lg:px-8 container mx-auto">
-                <div class="flex flex-row justify-center items-center">
-                    <span class="text-4xl font-black opacity-5">Wo-r &copy; 2021-<span id="copyright"></span></span>
+        <div class="absolute bottom-0 w-full">
+            <div class="flex flex-col-reverse sm:flex-row justify-between pt-12 pb-5 sm:items-center px-4 sm:px-6 lg:px-8 container mx-auto">
+                <div class="flex flex-row sm:justify-center items-center gap-5">
+                    <span class="text-sm font-bold">&copy; <span id="copyright"></span> Wo-r</span>
+                    <a class="text-sm font-bold hover:text-brown-light hover:underline" goto="/">Home</a>
+                    <a class="text-sm font-bold hover:text-brown-light hover:underline" goto="/articles">Articles</a>
+                    <a class="text-sm font-bold hover:text-brown-light hover:underline" goto="/resume">Resume</a>
+                </div>
+                <div class="flex flex-row sm:justify-center items-center gap-2">
+                    <a class="flex items-center" goto="#">
+                        <svg viewbox="0 0 30 25" width="30px" height="25px">    
+                            <path class="fill-brown hover:fill-brown-light" d="M28,6.937c-0.957,0.425-1.985,0.711-3.064,0.84c1.102-0.66,1.947-1.705,2.345-2.951c-1.03,0.611-2.172,1.055-3.388,1.295 c-0.973-1.037-2.359-1.685-3.893-1.685c-2.946,0-5.334,2.389-5.334,5.334c0,0.418,0.048,0.826,0.138,1.215 c-4.433-0.222-8.363-2.346-10.995-5.574C3.351,6.199,3.088,7.115,3.088,8.094c0,1.85,0.941,3.483,2.372,4.439 c-0.874-0.028-1.697-0.268-2.416-0.667c0,0.023,0,0.044,0,0.067c0,2.585,1.838,4.741,4.279,5.23 c-0.447,0.122-0.919,0.187-1.406,0.187c-0.343,0-0.678-0.034-1.003-0.095c0.679,2.119,2.649,3.662,4.983,3.705 c-1.825,1.431-4.125,2.284-6.625,2.284c-0.43,0-0.855-0.025-1.273-0.075c2.361,1.513,5.164,2.396,8.177,2.396 c9.812,0,15.176-8.128,15.176-15.177c0-0.231-0.005-0.461-0.015-0.69C26.38,8.945,27.285,8.006,28,6.937z">
+                        </svg>
+                    </a>
+                    <a class="flex items-center" goto="#">
+                        <svg viewbox="0 0 30 25" width="30px" height="25px">    
+                            <path class="fill-brown hover:fill-brown-light" d="M24,4H6C4.895,4,4,4.895,4,6v18c0,1.105,0.895,2,2,2h18c1.105,0,2-0.895,2-2V6C26,4.895,25.105,4,24,4z M10.954,22h-2.95 v-9.492h2.95V22z M9.449,11.151c-0.951,0-1.72-0.771-1.72-1.72c0-0.949,0.77-1.719,1.72-1.719c0.948,0,1.719,0.771,1.719,1.719 C11.168,10.38,10.397,11.151,9.449,11.151z M22.004,22h-2.948v-4.616c0-1.101-0.02-2.517-1.533-2.517 c-1.535,0-1.771,1.199-1.771,2.437V22h-2.948v-9.492h2.83v1.297h0.04c0.394-0.746,1.356-1.533,2.791-1.533 c2.987,0,3.539,1.966,3.539,4.522V22z">
+                        </svg>
+                    </a>
+                    <a class="flex items-center" goto="#">
+                        <svg viewbox="0 0 50 45" width="35px" height="45px">    
+                            <path class="fill-brown hover:fill-brown-light" d="M 44.898438 14.5 C 44.5 12.300781 42.601563 10.699219 40.398438 10.199219 C 37.101563 9.5 31 9 24.398438 9 C 17.800781 9 11.601563 9.5 8.300781 10.199219 C 6.101563 10.699219 4.199219 12.199219 3.800781 14.5 C 3.398438 17 3 20.5 3 25 C 3 29.5 3.398438 33 3.898438 35.5 C 4.300781 37.699219 6.199219 39.300781 8.398438 39.800781 C 11.898438 40.5 17.898438 41 24.5 41 C 31.101563 41 37.101563 40.5 40.601563 39.800781 C 42.800781 39.300781 44.699219 37.800781 45.101563 35.5 C 45.5 33 46 29.398438 46.101563 25 C 45.898438 20.5 45.398438 17 44.898438 14.5 Z M 19 32 L 19 18 L 31.199219 25 Z">
+                        </svg>
+                    </a>
                 </div>
             </div>
         </div>
