--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <div class="py-6 z-10">
             <div class="flex flex-row justify-between items-center px-4 sm:px-6 lg:px-8 container mx-auto">
                 <div class="flex flex-1 items-center">
-                    <a tooltip="This is Wo-r's github." class="cursor-pointer" goto="https://github.com/wo-r?tab=repositories">
+                    <a class="cursor-pointer" goto="https://github.com/wo-r?tab=repositories">
                         <img class="h-14 rounded-full shadow-xl" src="https://avatars.githubusercontent.com/u/78428114"/>
                     </a>
                 </div>
@@ -88,21 +88,178 @@
                 </div>
             </div>
         </div>
-        <div class="pt-[5rem] pb-[15rem] px-4 sm:px-6 lg:px-8 container mx-auto flex flex-col gap-[30rem]">
+        <div class="pt-[5rem] pb-[15rem] px-4 sm:px-6 lg:px-8 container mx-auto flex flex-col gap-[15rem]">
             <div class="flex flex-col justify-center items-center h-[55vh]">
                 <h1 class="text-6xl sm:text-8xl text-brown font-black">Welcome!</h1>
                 <span class="font-semibold text-center">I'm <b class="font-bold text-brown-light">Wo-r</b>, a self learned coder who has spent probably way too much time on coding.</span>
                 <button goto="#learn-more" ripple class="mt-7 px-3 py-3 bg-brown hover:bg-brown-light text-white rounded-lg shadow-xl relative overflow-hidden">Learn More</button>
             </div>
-            <div class="flex flex-col">
-                <h1 id="learn-more" class="text-6xl sm:text-8xl text-brown font-black mb-20">Languages</h1>
-                <div class="flex flex-row">
-                    <div class="flex flex-1 flex-col">
-                        <!--TOOD:-->
+            <div class="mt-[15rem] flex flex-col justify-center items-center">
+                <h1 id="learn-more" class="text-6xl sm:text-8xl text-brown font-black mb-20">About</h1>
+                <div class="flex flex-col lg:flex-row w-full justify-center items-center lg:items-start gap-20">
+                    <div class="flex flex-2">
+                        <img class="h-[20rem] rounded-full shadow-xl" src="https://avatars.githubusercontent.com/u/78428114">
+                    </div>
+                    <div class="flex flex-col gap-4 flex-1 items-center sm:items-start">
+                        <h2 class="text-4xl text-brown font-black">How I started</h2>
+                        <span class="font-semibold text-center sm:text-left">
+                            About 5 years ago from today—so around <b class="text-brown-accent font-bold">May of 2019</b>—I grew very tired of our school's attempts to block access to websites or specific YouTube videos. I rebelled against this, perhaps a little too much. Some of my rebellious attempts worked, while others didn't. It was during this time that I learned about HTML and the ability to create websites. <b class="text-brown-accent font-bold">My journey began with a website template creator called Nicepage</b>, which was okay, but I found it difficult to operate. I only managed to create one website with it, and it was not very good. Later that year, I started creating <b class="text-brown-accent font-bold">Python scripts</b>, one of which was called <b class="text-brown-accent font-bold">Folder Manager</b>, used for managing folders and directories. This was when my love for coding truly sparked. As a freshman in high school, I began coding websites with true HTML from the heart. After some time, I wanted to create a real website, one with a domain. <b class="text-brown-accent font-bold">I discovered a free website hosting service called 000webhost</b>&HorizontalLine;where I also learned PHP, another amazing language that I love to use&HorizontalLine;It was during this time that projects like <b class="text-brown-accent font-bold">Vote-Ralph</b>, <b class="text-brown-accent font-bold">Soldier-Island-Display</b>, <b class="text-brown-accent font-bold">Chrome-Crash</b>, and <b class="text-brown-accent font-bold">Read180-Bypass</b> were created on GitHub. Afterwards, I learned about jQuery, which remains my best-known language to this day. I began to have some far-fetched but not impossible ideas. One of the most persistent ideas was for our school's website Echo, by Agilix, which, to me, was badly designed and could be greatly improved. This led to my involvement with Themius, CustomSkins, and now Gradpass. Throughout my sophomore and junior years, I continued this work whenever I had time, and it has really paid off, as I now use it daily. I could not imagine my school life without it. So, all of this brings us to now. I am an intermediate coder, self-taught, persistent at something that may never work, and still in high school. <b class="text-brown-accent font-bold">Why am I the way I am? Who knows, but I absolutely love it.</b>
+                        </span>
+                    </div>
+                </div>
+                <div class="mt-20 flex flex-col w-full justify-center items-center gap-10">
+                    <h2 class="text-4xl text-brown font-black">Best Projects</h2>
+                    <div class="flex flex-col gap-10">
+                        <div class="flex flex-col sm:flex-row gap-10">
+                            <div goto="https://github.com/gradpass/gradpass.github.io" class="flex transition hover:transform-gpu hover:scale-105 flex-1 flex-col bg-white p-10 shadow-xl">
+                                <h2 class="text-2xl font-black text-brown">Gradpass</h2>
+                                <span class="font-semibold">The app designed for students of Echo—for simplicity and efficiency—is intended for use on phones or computers and primarily serves as a place to view grades and check agendas.</span>
+                            </div>
+                            <div goto="https://github.com/wo-r-professional/echo-plus" class="flex transition hover:transform-gpu hover:scale-105 flex-1 flex-col bg-white p-10 shadow-xl">
+                                <h2 class="text-2xl font-black text-brown">Echo Plus</h2>
+                                <span class="font-semibold">An extension for Echo that implements fixes, features, and redesigns, all aimed at enhancing the overall experience of using Echo. </span>
+                            </div>
+                        </div>
+                        <div class="flex flex-col sm:flex-row gap-10">
+                            <div class="flex flex-1">
+                                <div goto="https://github.com/wo-r-professional/fallout-4-codes" class="flex transition hover:transform-gpu hover:scale-105 flex-1 flex-col bg-white p-10 shadow-xl">
+                                    <h2 class="text-2xl font-black text-brown">Fallout 4 Codes (F4C)</h2>
+                                    <span class="font-semibold">A website that lets you easily find any item code from fallout 4 to use in the console.</span>
+                                </div>
+                            </div>
+                            <div class="flex flex-1">
+                                <div goto="https://github.com/wo-r-professional/arturo-sandoval-project" class="flex transition hover:transform-gpu hover:scale-105 flex-1 flex-col bg-white p-10 shadow-xl">
+                                    <h2 class="text-2xl font-black text-brown">Arturo Sandoval Project</h2>
+                                    <span class="font-semibold">Created for a spanish project—also my first tailwind website—to easily show who Arturo Sandoval is, and why I love him as a trumpet player.</span>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div></div>
+            <div class="flex flex-col justify-center items-center">
+                <h1 class="text-6xl sm:text-8xl text-brown font-black mb-20">Languages</h1>
+                <div class="flex flex-col gap-10">
+                    <div class="flex flex-col lg:flex-row gap-10">
+                        <div class="flex flex-1 flex-col justify-center items-center">
+                            <h1 class="text-5xl text-brown font-black">JS</h1>
+                            <div class="flex flex-col gap-2 mt-4">
+                                <div class="flex flex-col">
+                                    <span class="font-bold">Knowledge</span>
+                                    <div to="97%" class="bar w-[17rem] bg-brown">
+                                        <div class="w-0 py-2 bg-brown-light"></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="flex flex-1 flex-col justify-center items-center">
+                            <h1 class="text-5xl text-brown font-black">HTML</h1>
+                            <div class="flex flex-col gap-2 mt-4">
+                                <div class="flex flex-col">
+                                    <span class="font-bold">Knowledge</span>
+                                    <div to="84%" class="bar w-[17rem] bg-brown">
+                                        <div class="w-0 py-2 bg-brown-light"></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="flex flex-1 flex-col justify-center items-center">
+                            <h1 class="text-5xl text-brown font-black">CSS</h1>
+                            <div class="flex flex-col gap-2 mt-4">
+                                <div class="flex flex-col">
+                                    <span class="font-bold">Knowledge</span>
+                                    <div to="85%" class="bar w-[17rem] bg-brown">
+                                        <div class="w-0 py-2 bg-brown-light"></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="flex flex-col lg:flex-row gap-10">
+                        <div class="flex flex-1 flex-col justify-center items-center">
+                            <h1 class="text-5xl text-brown font-black">PHP</h1>
+                            <div class="flex flex-col gap-2 mt-4">
+                                <div class="flex flex-col">
+                                    <span class="font-bold">Knowledge</span>
+                                    <div to="67%" class="bar w-[17rem] bg-brown">
+                                        <div class="w-0 py-2 bg-brown-light"></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="flex flex-1 flex-col justify-center items-center">
+                            <h1 class="text-5xl text-brown font-black">Tailwind</h1>
+                            <div class="flex flex-col gap-2 mt-4">
+                                <div class="flex flex-col">
+                                    <span class="font-bold">Knowledge</span>
+                                    <div to="74%" class="bar w-[17rem] bg-brown">
+                                        <div class="w-0 py-2 bg-brown-light"></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="flex flex-1 flex-col justify-center items-center">
+                            <h1 class="text-5xl text-brown font-black">Python</h1>
+                            <div class="flex flex-col gap-2 mt-4">
+                                <div class="flex flex-col">
+                                    <span class="font-bold">Knowledge</span>
+                                    <div to="54%" class="bar w-[17rem] bg-brown">
+                                        <div class="w-0 py-2 bg-brown-light"></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="flex flex-col lg:flex-row gap-10">
+                        <div class="flex flex-1 flex-col justify-center items-center">
+                            <h1 class="text-5xl text-brown font-black">SQL</h1>
+                            <div class="flex flex-col gap-2 mt-4">
+                                <div class="flex flex-col">
+                                    <span class="font-bold">Knowledge</span>
+                                    <div to="24%" class="bar w-[17rem] bg-brown">
+                                        <div class="w-0 py-2 bg-brown-light"></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="flex flex-1 flex-col justify-center items-center">
+                            <h1 class="text-5xl text-brown font-black">C++</h1>
+                            <div class="flex flex-col gap-2 mt-4">
+                                <div class="flex flex-col">
+                                    <span class="font-bold">Knowledge</span>
+                                    <div to="31%" class="bar w-[17rem] bg-brown">
+                                        <div class="w-0 py-2 bg-brown-light"></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="flex flex-1 flex-col justify-center items-center">
+                            <h1 class="text-5xl text-brown font-black">Lua</h1>
+                            <div class="flex flex-col gap-2 mt-4">
+                                <div class="flex flex-col">
+                                    <span class="font-bold">Knowledge</span>
+                                    <div to="58%" class="bar w-[17rem] bg-brown">
+                                        <div class="w-0 py-2 bg-brown-light"></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="flex flex-col lg:flex-row gap-10">
+                        <div class="flex flex-1 flex-col justify-center items-center">
+                            <h1 class="text-5xl text-brown font-black">BrainF**k</h1>
+                            <div class="flex flex-col gap-2 mt-4">
+                                <div class="flex flex-col">
+                                    <span class="font-bold">Knowledge</span>
+                                    <div to="2%" class="bar w-[17rem] bg-brown">
+                                        <div class="w-0 py-2 bg-brown-light"></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
         <div class="absolute bottom-0 w-full">
             <div class="flex flex-col-reverse sm:flex-row justify-between pt-12 pb-5 sm:items-center px-4 sm:px-6 lg:px-8 container mx-auto">
