fix this on small devices

--- a/articles.html
+++ b/articles.html
@@ -102,7 +102,7 @@
             </div>
         </div>
         <div class="pt-[5rem] pb-[15rem] px-4 sm:px-6 lg:px-8 container mx-auto flex flex-col gap-[15rem]">
-            <div id="articles" class="flex flex-row gap-10 flex-wrap">
+            <div id="articles" class="flex flex-col sm:flex-row sm:flex-wrap gap-10">
                 <div class="loading flex flex-col w-full gap-10">
                     <div class="flex flex-col sm:flex-row gap-10">
                         <div class="flex transition hover:transform-gpu hover:scale-105 flex-1 flex-col bg-white p-10 shadow-xl">
