add files, css, and meta data

--- a/resume.html
+++ b/resume.html
@@ -5,6 +5,27 @@
         <link rel="apple-touch-icon" href="/src/logo.png">
         <link rel="icon" type="image/png" href="/src/logo.png">
         <title>Wo-r</title>
-        <!--TODO:-->
+        <meta name="title" content="Wo-r's Resume">
+        <meta name="description" content="My resume is filled with every accomplishment that has been note worthy by others, and myself.">
+        <meta name="keywords" content="resume,my resume,wo-r,wor,wo-r-professional,gradpass">
+        <meta property="og:description" content="My resume is filled with every accomplishment that has been note worthy by others, and myself.">
+        <meta name="robots" content="index, follow">
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+        <meta property="og:title" content="Wo-r Resume">
+        <meta property="og:image" content="/src/logo.png">
+        <meta property="og:url" content="https://wo-r.github.io/resume">
+        <link rel="preconnect" href="/" crossorigin="anonymous">
+        <script src="/src/thirdparty/jquery.js" defer></script>
+        <script src="/src/thirdparty/marked.js" defer></script>
+        <script src="/src/thirdparty/highlight.js" defer></script>
+        <link rel="preload" href="/src/thirdparty/tailwind.js" as="script">
+        <script src="/src/thirdparty/tailwind.js"></script>
+        <script>tailwind.config={theme:{extend:{colors:{"brown":"#494327","brown-light":"#766a37","brown-accent":"#968613"}}}}</script>
+        <style>@font-face{font-family:"Nunito";src:url("./src/nunito.ttf")format("truetype");}html{font-family:"Nunito";}::-webkit-scrollbar{width:0px;height:0px;}::-webkit-scrollbar-track{background:transparent;}::-webkit-scrollbar-thumb{background:transparent;}.ripple{position:absolute;background:rgba(150,134,19,0.8)!important;border-radius:50%;transform:scale(0);animation:ripple600mslinear;}@keyframes ripple{to{transform:scale(4);opacity:0;}}</style>
     </head>
+    <body class="relative min-h-screen box-border">
+        
+        <script src="/src/script.js" defer></script>
+    </body>
 </html>
