--- a/resume.html
+++ b/resume.html
@@ -88,11 +88,22 @@
                         </div>
                     </div>
                     <div class="py-3 z-10 px-4 container mx-auto">
-                        <div class="flex flex-col justify-center items-center h-[55vh]">
-                            <div class="text-6xl sm:text-9xl font-black">
-                                My Resume
+                        <div class="flex flex-col justify-center items-center h-[80vh]">
+                            <div class="flex flex-col sm:flex-row w-full">
+                                <div class="flex flex-col flex-1">
+                                    <h1 class="font-black text-5xl sm:text-7xl">Heya,<br>I'm Braden,<br>a self taught programmer.</h1>
+                                    <span class="mt-10 font-bold">I love coding. Ever since I learned about programming almost <span calculate-year></span> years ago, I have always strived to code better and better. I'm very confident that from the back then to now, I have achieved that. </span>
+                                    <div class="mt-10 flex flex-row gap-2">
+                                        <button goto="#learn-more" ripple class="flex flex-1 justify-center relative overflow-hidden z-20 py-4 px-3 bg-black bg-opacity-25 font-bold hover:bg-brown-light hover:bg-opacity-20 transition rounded-lg">Learn More</button>
+                                        <button goto="#" ripple class="flex flex-1 justify-center relative overflow-hidden z-20 py-4 px-3 bg-black bg-opacity-25 font-bold hover:bg-brown-light hover:bg-opacity-20 transition rounded-lg">Contact Me</button>
+                                    </div>
+                                </div>
+                                <div class="flex flex-1">
+                                    <div class="flex flex-col justify-center items-center w-full">
+                                        <!--TODO: what should be here hmmmm-->
+                                    </div>
+                                </div>
                             </div>
-                            <span></span>
                         </div>
                     </div>
                 </div>
